--- a/README.org
+++ b/README.org
@@ -7,17 +7,21 @@
     - shortcut.vim : 自定义快捷键
     - nonscript : 无需插件的的脚本，依赖 script.vim
     - script.vim : 无依赖的一些基本设置以及自定义函数
-
-| 快捷键             | 映射                | 备注                                |
-|--------------------+---------------------+-------------------------------------|
-| nnoremap <C-Up>    | :m .+1<CR>          | normal mode 下将一行代码移动向上移动 |
-| nnoremap  <C-Down> | :m .-2<CR>          | normal mode 将一行代码移动向下移动   |
-| inoremap <C-Up>    | <ESC>:m .+1<CR>==gi | insert mode 将一行代码移动向上移动   |
-| inoremap  <C-Down  | <ESC>:m .-2<CR>==gi | insert mode 将一行代码移动向下移动   |
-| vnoremap <C-Up>    | :m '>+1<CR>gv=gv    | visual mode 将一行代码移动向上移动    |
-| vnoremap <C-Down>  | :m '<-2<CR>gv=gv    | visual mode 将一行代码移动向下移动    |
+** keybinds(Part)
+| 快捷键             | 映射                                   | 备注                                 |
+|--------------------+----------------------------------------+--------------------------------------|
+| nnoremap <C-Up>    | :<c-u>execute 'move -1-'. v:count1<cr> | normal mode 下将一行代码移动向上移动 |
+| nnoremap  <C-Down> | :<c-u>execute 'move +'. v:count1<cr>   | normal mode 将一行代码移动向下移动   |
+| inoremap <C-Up>    | <ESC>:m .+1<CR>==gi                    | insert mode 将一行代码移动向上移动   |
+| inoremap  <C-Down  | <ESC>:m .-2<CR>==gi                    | insert mode 将一行代码移动向下移动   |
+| vnoremap <C-Up>    | :m '>+1<CR>gv=gv                       | visual mode 将一行代码移动向上移动   |
+| vnoremap <C-Down>  | :m '<-2<CR>gv=gv                       | visual mode 将一行代码移动向下移动   |
  
 ** Changelog
+*** 2018/8/8
+- jedi 的一些支持补全，部分快捷键修改
+- 加入了快捷键导航，减少记忆负担
+- 增减了一些插件
 *** 2018/8/5
 - js 支持 vue 忽然好了，重启解决
 - 写了几个函数，并绑定快捷键
